# not-a-monolith

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
modules/rag/ingestion/: base.py  chunker.py  parsers.py
notebooks/: ingestion.ipynb
shared/: config.py
