[project]
name = "not-a-monolith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
    "langsmith>=0.7.22",
    "openai>=2.29.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "poethepoet>=0.42.1",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (imports não usados, variáveis indefinidas)
    "I",    # isort (ordenação de imports)
    "UP",   # pyupgrade (sintaxe moderna do Python)
    "B",    # flake8-bugbear (bugs comuns e antipadrões)
    "C4",   # flake8-comprehensions (comprehensions mais eficientes)
    "SIM",  # flake8-simplify (simplificação de código)
]
ignore = [
    "E501", # line too long — controlado pelo formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.poe.tasks]
lint = "ruff check --fix modules/ shared/"
format = "ruff format modules/ shared/"

[tool.poe.tasks.check]
sequence = ["lint", "format"]
